--- a/styleguide.html
+++ b/styleguide.html
@@ -45,17 +45,34 @@
     <link rel="stylesheet" media="all" href="vendor/normalize/normalize.css">
     <!-- Stylesheets: App -->
     <link rel="stylesheet" media="all" href="css/fonts.css">
+    <link rel="stylesheet" media="all" href="css/grid.css">
     <link rel="stylesheet" media="all" href="css/typography.css">
-    <link rel="stylesheet" media="all" href="css/styleguide.css">
+    <link rel="stylesheet" media="all" href="css/syleguide.css">
     <!-- Modernizr: feature detection -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
 </head>
   </head>
   <body>
-    <div class="intro">
-      <h1>GDM - HTML5 Template</h1>
-      <p>We educate future talents in Design for Print and Non-Print, Web- and App Development, Audio and Video Production, 2D- and 3D Animations, Printing and Packaging and the whole Management of those workflows!</p>
+    <div class="navigation">
+        <div class="right">
+            <nav>
+                 <ul>
+                    <li><a class="link" href="">Buttons/ links</a></li>
+                    <li><a  href="">Pictures</a></li>
+                </ul>
+            </nav>
+         </div>
     </div>
+    <div class="g__row row_1">
+        <div class="g__column-12">
+             <div>
+                <h1>Style tyle</h1>
+             </div>
+                <div class=" g__offset-2 g__column-12 g__buttons">
+                    <h2 class="title">Buttons</h2>
+                </div>
+            </div>
+    
     <!-- Scripts: Vendors -->
       <!-- For example: jQuery, lodash, handlebars, ... -->
     <!-- Scripts: App -->
