--- a/styleguide.html
+++ b/styleguide.html
@@ -57,19 +57,30 @@
         <div class="right">
             <nav>
                  <ul>
-                    <li><a class="link" href="">Buttons/ links</a></li>
-                    <li><a  href="">Pictures</a></li>
+                    <li><a class="link" href="">Fonts</a></li>
+                    <li><a  href="">Colors</a></li>
+                    <li><a  href="">Buttons/ links</a></li>
+                     <li><a  href="">Pictures</a></li>
                 </ul>
             </nav>
-         </div>
+        </div>
     </div>
     <div class="g__row row_1">
         <div class="g__column-12">
              <div>
                 <h1>Style tyle</h1>
              </div>
-                <div class=" g__offset-2 g__column-12 g__buttons">
-                    <h2 class="title">Buttons</h2>
+                <div class=" g__offset-2 g__column-10 g__buttons">
+                    <h2 class="title">Fonts</h2>
+                </div>
+                 <div class=" g__offset-2 g__column-4 g__buttons">
+                    <p class="titles">
+                        Titles.........
+                    </p>
+                </div>
+                <div class=" g__offset-2 g__column-4 g__buttons">
+                    <p class="important">Maecenas faucibus mollis interdum.</p>
+                    <p class="text">Nullam id dolor id nibh ultricies vehicula ut id elit. Vestibulum id ligula porta felis euismod semper.</p>
                 </div>
             </div>
     
