--- a/styleguide.html
+++ b/styleguide.html
@@ -58,7 +58,7 @@
                 </h1>
                 <h1>Ab<span class="underline_title">out us</span></h1>
                 <h2>
-                    Undertitle / Helvetica bold 20px
+                    Subtitle / Helvetica bold 20px
                 </h2>
                 <h3>
                     important text / Helvetica bold 16px
