--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
   </head>
   <body>
     <div class="intro">
-      <h1>GDM - HTML5 Template</h1>
-      <p>We educate future talents in Design for Print and Non-Print, Web- and App Development, Audio and Video Production, 2D- and 3D Animations, Printing and Packaging and the whole Management of those workflows!</p>
+      <h1>Project: Creative Agency</h1>
+      <p>Er word gevraagd een volledige responsive website te maken voor een creative agency</p>
+      <a href="https://arnewamb.github.io/1617.webd2/bubble.html">Soon online</a>
     </div>
     <!-- Scripts: Vendors -->
       <!-- For example: jQuery, lodash, handlebars, ... -->
     <!-- Scripts: App -->
-    <script src="js/main.js"></script>
+
   </body>
 </html>
