--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <body>
     <div class="intro">
       <h1>Project: Creative Agency</h1>
-      <p>Er word gevraagd een volledige responsive website te maken voor een creative agency</p>
-      <a href="https://arnewamb.github.io/1617.webd2/bubble.html">Soon online</a>
+      <p>Er word gevraagd een volledige responsive website <br>te maken voor een creative agency</p>
+      <a href="https://arnewamb.github.io/1617.webd2/bubble.html">Soon online »</a>
     </div>
     <!-- Scripts: Vendors -->
       <!-- For example: jQuery, lodash, handlebars, ... -->
