--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Mobile Viewport -->
 	  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Most important SEO tag -->
-    <title>HTML5 | Webdesign II | GDM</title>
+    <title>Project page 1617 </title>
     <!-- Other SEO friendly tags -->	
     <meta name="description" content="Lees hier alles over nieuwe media, html5 en andere ontwikkelingen in webdevelopment en mobile development. De docenten NMD willen graag hun kennis delen met jou!">
     <meta name="keywords" content="HTML5, JavaScript, jQuery, CSS3">
@@ -56,6 +56,9 @@
       <h1>Project: Creative Agency</h1>
       <p>Er word gevraagd een volledige responsive website <br>te maken voor een creative agency</p>
       <a href="https://arnewamb.github.io/1617.webd2/bubble.html">Soon online »</a>
+      <div class="socialmedia">
+         <a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook-box white"></i></a> <a class="icon" href="https://twitter.com/ArneWambeke1" target="blank"><i class="zmdi zmdi-twitter-box white"></i></a> <a class="icon" href="https://www.instagram.com/arnewmbk/" target="blank"><i class="zmdi zmdi-instagram white"></i></a>
+                        </div>
     </div>
     <!-- Scripts: Vendors -->
       <!-- For example: jQuery, lodash, handlebars, ... -->
