--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
     <!-- Stylesheets: Vendors -->
     <link rel="stylesheet" media="all" href="vendor/normalize/normalize.css">
     <!-- Stylesheets: App -->
-     <link rel="stylesheet" media="all" href="css/projectpagecss/vendors/icon1.css">
-      <link rel="stylesheet" media="all" href="css/projectpagecss/vendors/icon2.css">
+     <link rel="stylesheet" media="all" href="css/scss/vendors/icon1.css">
+      <link rel="stylesheet" media="all" href="css/scss/vendors/icon2.css">
     <link rel="stylesheet" media="all" href="css/fonts.css">
     <link rel="stylesheet" media="all" href="css/typography.css">
-    <link rel="stylesheet" media="all" href="css/projectpagecss/projectpage-min.css">
+    <link rel="stylesheet" media="all" href="css/projectpage-min.css">
     <!-- Modernizr: feature detection -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
 </head>
