--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -90,7 +90,7 @@
 					<div class="sf-grid__adress sf-grid__column-xxsm-1 sf-grid__column-xsm-11 sf-grid__offset-sm-1 sf-grid__column-sm-11 sf-grid__offset-md-1 sf-grid__column-md-5
 					sf-grid__pull-md-12 
 					sf-grid__offset-lg-0
-					sf-grid__column-lg-2">
+					sf-grid__column-lg-3">
 						<div class="adress_block">
 							<h2 class="orange bold">
 								Address
@@ -98,7 +98,9 @@
 							<p>
 								Brugsesteenweg 400<br>
 								8800 Roeselare<br>
-								Belgium
+								Belgium <br>
+								+32 474 123 800 <br>
+								bubble@bubble.be
 							</p>
 							<div class="socialmedia">
 								<a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook"></i></a> <a class="icon" href="https://www.paypal.me/Moviescoop/5" target="blank"><i class="zmdi zmdi-twitter"></i></a> <a class="icon" href="https://www.paypal.me/Moviescoop/5" target="blank"><i class="zmdi zmdi-instagram"></i></a>
@@ -109,7 +111,7 @@
 					sf-grid__column-xxsm-1 sf-grid__column-xsm-12 sf-grid__offset-sm-1 sf-grid__column-sm-8 sf-grid__offset-md-1 sf-grid__column-md-5
 					sf-grid__pull-md-12 
 					sf-grid__offset-lg-0
-					sf-grid__column-lg-3">
+					sf-grid__column-lg-4">
 						<div class="inputfield">
 							<input class="shortline textField" name="Firstname" type="text" placeholder="Firstname*"> <input class="shortline textField" name="Lastname" type="text" placeholder ="Lastname*"> <input class="shortline textField" name="Email" type="text" placeholder ="Email*"> <input class="shortline textField" name="Phoen" type="text" placeholder="Phone"> <input class="shortline textField" name="Company" type="text" placeholder="Company"><br>
 							<!--ingeven van tekst-->
