message on sent

--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -112,13 +112,13 @@
 					sf-grid__pull-md-12 
 					sf-grid__offset-lg-0
 					sf-grid__column-lg-4">
-						<div class="inputfield">
+						<div id="input" class="inputfield">
 							<input class="shortline textField" name="Firstname" type="text" placeholder="Firstname*"> <input class="shortline textField" name="Lastname" type="text" placeholder ="Lastname*"> <input class="shortline textField" name="Email" type="text" placeholder ="Email*"> <input class="shortline textField" name="Phoen" type="text" placeholder="Phone"> <input class="shortline textField" name="Company" type="text" placeholder="Company"><br>
 							<!--ingeven van tekst-->
 							 
 							<textarea class="longline textField" cols="40" name="Message" rows="5" placeholder="Message"></textarea> 
 							<button id="reset" class="circle">Sent
-							</button>
+							</button><br>
 						</div>
 					</div>
 				</div>
