--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -126,6 +126,18 @@
 			</div><!--end rows-->
 		</div><!--end container-->
 		<!--end wrapper-->
+		<script> function initMap() {
+          var roeselare = {lat: 50.970286, lng: 3.119844};
+          var map = new google.maps.Map(document.getElementById('map'), {
+            zoom: 15,
+            center: roeselare
+          });
+          var marker = new google.maps.Marker({
+            position: roeselare,
+            map: map
+          });
+        }
+        map.clearOverlays();</script>
 		<script src="js/reset-min.js"></script>
 		<script src="js/maps-min.js"</script> 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
