--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -138,6 +138,9 @@
           });
         }
         map.clearOverlays();</script>
+        <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbexx3ppULT7a2USfkY1wvAujBrE24Aj0&callback=initMap">
+    </script>
 		<script src="js/reset-min.js"></script>
 		<script src="js/maps-min.js"</script> 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
