--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -126,18 +126,20 @@
 			</div><!--end rows-->
 		</div><!--end container-->
 		<!--end wrapper-->
-		<script> function initMap() {
-          var roeselare = {lat: 50.970286, lng: 3.119844};
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: 15,
-            center: roeselare
-          });
-          var marker = new google.maps.Marker({
-            position: roeselare,
-            map: map
-          });
-        }
-        map.clearOverlays();</script>
+		
+        <script>
+      function initMap() {
+        var uluru = {lat: 50.970286, lng: 3.119844};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 15,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
         <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbexx3ppULT7a2USfkY1wvAujBrE24Aj0&callback=initMap">
     </script>
