--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <h1>Project: Creative Agency</h1>
       <p>Er word gevraagd een volledige responsive website <br>te maken voor een creative agency</p>
       <a href="https://arnewamb.github.io/1617.webd2/bubble.html">Soon online »</a>
-       <a href="sites/phpbubble">.</a>
+       <a href="sites/phpbubble/index.php">.</a>
       <div class="socialmedia">
          <a class="icon" href="https://www.facebook.com/ArneWambeke" target="blank"><i class="zmdi zmdi-facebook-box white"></i></a>  <a class="icon" href="https://www.instagram.com/arnewmbk/" target="blank"><i class="zmdi zmdi-instagram white"></i></a>
                         </div>
