--- a/sites/bubble/detailpage.html
+++ b/sites/bubble/detailpage.html
@@ -45,7 +45,32 @@
         <div class="sf-grid__wrapper">
             <div class="sf-grid__container">
                 <!--navigation without grid-->
-                <?php include("includes/navigation.php"); ?>
+                <div class="navigation">
+                    <div class="left">
+                        <a href="index.html"><img class="logo" src="assets/images/bubble.svg"></a>
+                    </div>
+                    <div class="right">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a class="link" href="index.html#about_us">About us/ team</a>
+                                </li>
+                                <li>
+                                    <a href="diensten.html">Services/ approach</a>
+                                </li>
+                                <li>
+                                    <a class="link" href="portfolio.html">Portfolio</a>
+                                </li>
+                                <li>
+                                    <a class="link" href="jobs.html">Jobs</a>
+                                </li>
+                                <li>
+                                    <a class="link" href="contact.html">Contact</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
                 <div class="sf-grid__row row__middle">
                     <div class="
                     sf-grid__offset-xsm-1
@@ -76,7 +101,40 @@ Deze was gevuld met tips voor zo goedkoop mogelijk en tegelijk zo fancy mogelijk
 </p>
 
                 </div>
-               <?php include("includes/footer.php"); ?>
+                <footer class="sf-grid__column-12">
+                    <div class=" 
+                    sf-grid__offset-xsm-0 sf-grid__column-xsm-9 sf-grid__offset-sm-2 sf-grid__column-sm-8 sf-grid__column-md-2">
+                        <p class="white adress">
+                            Bubble BVBA<br>
+                            Brugsesteenweg 400<br>
+                            8800 Roeselare<br>
+                            Belgium<br>
+                            +32 474 123 800<br>
+                            bubble@bubble.be<br>
+                        </p>
+                    </div>
+                    <div class=" socialmedia
+                    sf-grid__offset-xsm-1 sf-grid__column-xsm-1 sf-grid__offset-sm-1 sf-grid__column-sm-1 sf-grid__column-md-2 sf-grid__column-lg-1 sf-grid__column-xlg-1">
+                        <div class="socialmedia">
+                            <a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook-box white"></i></a> <a class="icon" href="https://twitter.com/ArneWambeke1" target="blank"><i class="zmdi zmdi-twitter-box white"></i></a> <a class="icon" href="https://www.instagram.com/arnewmbk/" target="blank"><i class="zmdi zmdi-instagram white"></i></a>
+                        </div>
+                    </div>
+                    <div class="newsletter sf-grid__offset-xsm-1 sf-grid__column-xsm-12 sf-grid__offset-sm-1 sf-grid__column-sm-12 sf-grid__column-md-2 sf-grid__offset-lg-1 sf-grid__column-lg-1 sf-grid__column-xlg-1">
+                        <p>
+                            Newsletter
+                        </p><input placeholder="email" type="text"><br>
+                        <button>Subscribe</button>
+                    </div>
+                </footer>
+            </div>
+        </div>
+
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+                </script> 
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js">
+                </script> 
+                <script src="js/headroom-min.js">
+                </script>
        
     </body>
 </html>
