changes on footer

--- a/sites/bubble/diensten.html
+++ b/sites/bubble/diensten.html
@@ -73,44 +73,108 @@
 					</div>
 				</div>
 				<div class="sf-grid__row row__into">
-					<div class=" sf-grid__offset-xsm-1 sf-grid__column-xsm-8 sf-grid__offset-sm-1 sf-grid__column-sm-6 sf-grid__offset-md-1 sf-grid__column-md-4 sf-grid__offset-lg-3 sf-grid__column-lg-6">
+					<div class=" 
+					sf-grid__offset-xsm-1 
+					sf-grid__column-xsm-8 
+					sf-grid__offset-sm-1 
+					sf-grid__column-sm-6 
+					sf-grid__offset-md-1 
+					sf-grid__column-md-4 
+					sf-grid__offset-lg-3 
+					sf-grid__column-lg-6">
 						<h1>
 							Wh<span class="underline_title">at we do</span>
 						</h1>
 					</div>
 				</div>
 				<div class="sf-grid__row row__picture">
-					<div class=" sf-grid__offset-xxsm-1 sf-grid__column-xxsm-4 sf-grid__offset-xsm-1 sf-grid__column-xsm-3 sf-grid__offset-sm-1 sf-grid__column-sm-2 sf-grid__offset-md-1 sf-grid__column-md-2 sf-grid__offset-lg-4 sf-grid__column-lg-1">
+					<div class=" 
+					sf-grid__offset-xxsm-1 
+					sf-grid__column-xxsm-4 
+					sf-grid__offset-xsm-1 
+					sf-grid__column-xsm-3 
+					sf-grid__offset-sm-1 
+					sf-grid__column-sm-2 
+					sf-grid__offset-md-1 
+					sf-grid__column-md-2 
+					sf-grid__offset-lg-4 
+					sf-grid__column-lg-1">
 						<img alt="designing" src="assets/images/design_icon.svg">
 					</div>
-					<div class=" sf-grid__column-xxsm-7 sf-grid__column-xsm-6 sf-grid__offset-sm-0 sf-grid__column-sm-5 sf-grid__offset-md-3 sf-grid__column-md-8 sf-grid__offset-lg-0 sf-grid__column-lg-3">
+					<div class=" 
+					sf-grid__column-xxsm-7 
+					sf-grid__column-xsm-6 
+					sf-grid__offset-sm-0 
+					sf-grid__column-sm-5 
+					sf-grid__offset-md-3 
+					sf-grid__column-md-8 
+					sf-grid__offset-lg-0 
+					sf-grid__column-lg-3">
 						<p>
 							We love to take the design to the next level. So togheter with you we will find a design that fits to you’r wishes and is perfect for your imago
 						</p>
 					</div>
 				</div>
 				<div class="sf-grid__row row__picture">
-					<div class=" sf-grid__offset-xxsm-1 sf-grid__column-xxsm-4 sf-grid__offset-xsm-1 sf-grid__column-xsm-3 sf-grid__offset-sm-1 sf-grid__column-sm-2 sf-grid__offset-md-1 sf-grid__column-md-2 sf-grid__offset-lg-4 sf-grid__column-lg-1">
+					<div class=" 
+					sf-grid__offset-xxsm-1 
+					sf-grid__column-xxsm-4 
+					sf-grid__offset-xsm-1 
+					sf-grid__column-xsm-3 
+					sf-grid__offset-sm-1 
+					sf-grid__column-sm-2 
+					sf-grid__offset-md-1 
+					sf-grid__column-md-2 
+					sf-grid__offset-lg-4 
+					sf-grid__column-lg-1">
 						<img alt="development" src="assets/images/develop_icon.svg">
 					</div>
-					<div class=" sf-grid__column-xxsm-7 sf-grid__column-xsm-6 sf-grid__offset-sm-0 sf-grid__column-sm-5 sf-grid__offset-md-3 sf-grid__column-md-8 sf-grid__offset-lg-0 sf-grid__column-lg-3">
+					<div class=" 
+					sf-grid__column-xxsm-7 
+					sf-grid__column-xsm-6 
+					sf-grid__offset-sm-0 
+					sf-grid__column-sm-5 
+					sf-grid__offset-md-3 
+					sf-grid__column-md-8 
+					sf-grid__offset-lg-0 
+					sf-grid__column-lg-3">
 						<p>
 							Here at bubble we have a team that lives for coding. They almost talk in code!
 						</p>
 					</div>
 				</div>
 				<div class="sf-grid__row row__picture">
-					<div class=" sf-grid__offset-xxsm-1 sf-grid__column-xxsm-4 sf-grid__offset-xsm-1 sf-grid__column-xsm-3 sf-grid__offset-sm-1 sf-grid__column-sm-2 sf-grid__offset-md-1 sf-grid__column-md-2 sf-grid__offset-lg-4 sf-grid__column-lg-1">
+					<div class=" 
+					sf-grid__offset-xxsm-1 
+					sf-grid__column-xxsm-4 
+					sf-grid__offset-xsm-1 
+					sf-grid__column-xsm-3 
+					sf-grid__offset-sm-1 
+					sf-grid__column-sm-2 
+					sf-grid__offset-md-1 
+					sf-grid__column-md-2 
+					sf-grid__offset-lg-4 
+					sf-grid__column-lg-1">
 						<img alt="audio and video" src="assets/images/video_icon.svg">
 					</div>
-					<div class=" sf-grid__column-xxsm-7 sf-grid__column-xsm-6 sf-grid__offset-sm-0 sf-grid__column-sm-5 sf-grid__offset-md-3 sf-grid__column-md-8 sf-grid__offset-lg-0 sf-grid__column-lg-3">
+					<div class=" 
+					sf-grid__column-xxsm-7 
+					sf-grid__column-xsm-6 
+					sf-grid__offset-sm-0 
+					sf-grid__column-sm-5 
+					sf-grid__offset-md-3 
+					sf-grid__column-md-8 
+					sf-grid__offset-lg-0 
+					sf-grid__column-lg-3">
 						<p>
 							We are also experts on surface for moving image. Business videos, commercials,...? We can convert your most crazy ideas to video
 						</p>
 					</div>
 				</div>
 				<div class="sf-grid__row row__txt">
-					<div class=" sf-grid__offset-xxsm-0 sf-grid__column-xxsm-9 
+					<div class=" 
+					sf-grid__offset-xxsm-0 
+					sf-grid__column-xxsm-9 
 					sf-grid__offset-xsm-1 
 					sf-grid__column-xsm-8 
 					sf-grid__offset-sm-1 
@@ -126,7 +190,14 @@
 				</div>
 				<div class="sf-grid__row steps">
 					<div class="sf-grid__row step1">
-						<div class=" skill sf-grid__column-xxsm-8 sf-grid__offset-sm-2 sf-grid__column-sm-6 sf-grid__offset-md-1 sf-grid__column-md-5 sf-grid__offset-lg-4 sf-grid__column-lg-4">
+						<div class=" skill 
+						sf-grid__column-xxsm-8 
+						sf-grid__offset-sm-2 
+						sf-grid__column-sm-6 
+						sf-grid__offset-md-1 
+						sf-grid__column-md-5 
+						sf-grid__offset-lg-4 
+						sf-grid__column-lg-4">
 							<div class="number">
 								<p>
 									1
@@ -140,7 +211,14 @@
 						</div>
 					</div>
 					<div class="sf-grid__row step2">
-						<div class=" skill sf-grid__column-xxsm-8 sf-grid__offset-sm-2 sf-grid__column-sm-6 sf-grid__offset-md-1 sf-grid__column-md-5 sf-grid__offset-lg-4 sf-grid__column-lg-4">
+						<div class=" skill 
+						sf-grid__column-xxsm-8 
+						sf-grid__offset-sm-2 
+						sf-grid__column-sm-6 
+						sf-grid__offset-md-1 
+						sf-grid__column-md-5 
+						sf-grid__offset-lg-4 
+						sf-grid__column-lg-4">
 							<div class="number">
 								<p>
 									2
@@ -154,7 +232,14 @@
 						</div>
 					</div>
 					<div class="sf-grid__row step3">
-						<div class=" skill sf-grid__column-xxsm-8 sf-grid__offset-sm-2 sf-grid__column-sm-6 sf-grid__offset-md-1 sf-grid__column-md-5 sf-grid__offset-lg-4 sf-grid__column-lg-4">
+						<div class=" skill 
+						sf-grid__column-xxsm-8 
+						sf-grid__offset-sm-2 
+						sf-grid__column-sm-6 
+						sf-grid__offset-md-1 
+						sf-grid__column-md-5 
+						sf-grid__offset-lg-4 
+						sf-grid__column-lg-4">
 							<div class="number">
 								<p>
 									3
@@ -187,16 +272,19 @@
 						</div>
 					</div>
 					<div class="newsletter sf-grid__offset-xsm-1 sf-grid__column-xsm-12 sf-grid__offset-sm-1 sf-grid__column-sm-12 sf-grid__column-md-2 sf-grid__offset-lg-1 sf-grid__column-lg-1 sf-grid__column-xlg-1">
+					<div id="input"></div>
 						<p>
 							Newsletter
-						</p><input placeholder="email" type="text"><br>
-						<button>Subscribe</button>
+						</p><input class="textField" placeholder="email" type="text"><br>
+						<button id="reset">Subscribe</button>
+					</div>
 					</div>
 				</footer>
-			</div>
 		</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
-    <script src="js/headroom-min.js"></script>
-	</body>
+	</div>
+	<script src="js/resetFooter-min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
+	<script src="js/headroom-min.js"></script>
+</body>
 </html>
