--- a/sites/bubble/detailpage.html
+++ b/sites/bubble/detailpage.html
@@ -101,7 +101,7 @@ Deze was gevuld met tips voor zo goedkoop mogelijk en tegelijk zo fancy mogelijk
 </p>
 
                 </div>
-                <footer class="sf-grid__column-12">
+               <footer class="sf-grid__column-12">
                     <div class=" 
                     sf-grid__offset-xsm-0 sf-grid__column-xsm-9 sf-grid__offset-sm-2 sf-grid__column-sm-8 sf-grid__column-md-2">
                         <p class="white adress">
@@ -120,21 +120,19 @@ Deze was gevuld met tips voor zo goedkoop mogelijk en tegelijk zo fancy mogelijk
                         </div>
                     </div>
                     <div class="newsletter sf-grid__offset-xsm-1 sf-grid__column-xsm-12 sf-grid__offset-sm-1 sf-grid__column-sm-12 sf-grid__column-md-2 sf-grid__offset-lg-1 sf-grid__column-lg-1 sf-grid__column-xlg-1">
+                    <div id="input"></div>
                         <p>
                             Newsletter
-                        </p><input placeholder="email" type="text"><br>
-                        <button>Subscribe</button>
+                        </p><input class="textField" placeholder="email" type="text"><br>
+                        <button id="reset">Subscribe</button>
+                    </div>
                     </div>
                 </footer>
-            </div>
         </div>
-
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
-                </script> 
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js">
-                </script> 
-                <script src="js/headroom-min.js">
-                </script>
-       
-    </body>
+    </div>
+    <script src="js/resetFooter-min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
+    <script src="js/headroom-min.js"></script>
+</body>
 </html>
