bad pictures changed

--- a/sites/bubble/portfolio.html
+++ b/sites/bubble/portfolio.html
@@ -210,7 +210,7 @@
 						<div class="work">
 							<a href="">	
 								<div class="pic6 pichigh">
-									<img class="pic" src="assets/images/portfolio/penguinOnSaturn.jpg" alt="penguinOnSaturn">
+									<img class="pic" src="assets/images/portfolio/spirit_triangle.jpg" alt="penguinOnSaturn">
 								</div>
 							</a>
 						</div>
@@ -263,7 +263,7 @@
 						<div class="work">
 							<a href="">	
 								<div class="pic pichigh">
-									<img class="pic" src="assets/images/portfolio/penguinOnSaturn.jpg" alt="penguinOnSaturn">
+									<img class="pic" src="assets/images/portfolio/starsky.jpg" alt="starsky">
 								</div>
 							</a>
 						</div>
@@ -280,7 +280,7 @@
 						<div class="work">
 							<a href="">
 								<div class="pic piclow">
-									<img class="pic" src="assets/images/portfolio/penguinOnSaturn.jpg" alt="penguinOnSaturn">
+									<img class="pic" src="assets/images/portfolio/doubleex.jpg" alt="double exposure effect">
 								</div>
 							</a>
 						</div>
