--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -103,7 +103,7 @@
 								bubble@bubble.be
 							</p>
 							<div class="socialmedia">
-								<a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook"></i></a> <a class="icon" href="https://www.paypal.me/Moviescoop/5" target="blank"><i class="zmdi zmdi-twitter"></i></a> <a class="icon" href="https://www.paypal.me/Moviescoop/5" target="blank"><i class="zmdi zmdi-instagram"></i></a>
+								<a class="icon" href="https://www.facebook.com/bubblecreativea/" target="blank"><i class="zmdi zmdi-facebook"></i></a> <a class="icon" href="https://twitter.com/ArneWambeke1?lang=en" target="blank"><i class="zmdi zmdi-twitter"></i></a> <a class="icon" href="https://www.instagram.com/arnewmbk/" target="blank"><i class="zmdi zmdi-instagram"></i></a>
 							</div>
 						</div>
 					</div>
