--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -143,10 +143,10 @@
         <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbexx3ppULT7a2USfkY1wvAujBrE24Aj0&callback=initMap">
     </script>
-		<script src="js/reset-min.js"></script>
-		<script src="js/maps-min.js"</script> 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
-	<script src="js/headroom-min.js"></script>
+		<script async src="js/reset-min.js"></script>
+		<script async src="js/maps-min.js"</script> 
+		<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
+	<script async src="js/headroom-min.js"></script>
 	</body>
 </html>
