--- a/sites/bubble/index.html
+++ b/sites/bubble/index.html
@@ -205,9 +205,9 @@
 				</footer>
 		</div>
 	</div>
-	<script src="js/resetFooter-min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
-	<script src="js/headroom-min.js"></script>
+	<script async src="js/resetFooter-min.js"></script>
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
+	<script async src="js/headroom-min.js"></script>
 </body>
 </html>
