--- a/sites/bubble/portfolio.html
+++ b/sites/bubble/portfolio.html
@@ -110,7 +110,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic3 pichigh">
 								<img alt="ekocycle epub" class="pic" src="assets/images/portfolio/epub.jpg">
 							</div></a>
@@ -118,7 +118,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-4">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic4 pichigh">
 								<img alt="banner waelkens" class="pic" src="assets/images/portfolio/waelkens_stage.jpg">
 							</div></a>
@@ -128,7 +128,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic7 piclow">
 								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/mountainpub.jpg">
 							</div></a>
@@ -136,7 +136,7 @@
 						<div class="sf-grid__row inner__row">
 							<div class=" sf-grid__column-xsm-12 sf-grid__column-sm-12 sf-grid__column-md-12 sf-grid__column-lg-12">
 								<div class="work">
-									<a href="">
+									<a href="detailpage.html">
 									<div class="pic8 piclow">
 										<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/flow.jpg">
 									</div></a>
@@ -146,7 +146,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic6 pichigh">
 								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/spirit_triangle.jpg">
 							</div></a>
@@ -154,7 +154,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic7 piclow">
 								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/cdcover.jpg">
 							</div></a>
@@ -162,7 +162,7 @@
 						<div class="sf-grid__row inner__row">
 							<div class="sf-grid__offset-xsm-0 sf-grid__column-xsm-12 sf-grid__column-sm-12 sf-grid__column-md-12 sf-grid__column-lg-12">
 								<div class="work">
-									<a href="">
+									<a href="detailpage.html">
 									<div class="pic8 piclow">
 										<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/penguinOnSaturn.jpg">
 									</div></a>
@@ -174,7 +174,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-4">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic4 pichigh">
 								<img alt="banner waelkens" class="pic" src="assets/images/portfolio/doubleex.jpg">
 							</div></a>
@@ -182,7 +182,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="">
+							<a href="detailpage.html">
 							<div class="pic6 pichigh">
 								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/starsky.jpg">
 							</div></a>
