--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -52,32 +52,38 @@
 		<div class="sf-grid__wrapper">
 			<div class="sf-grid__container">
 				<!--navigation without grid-->
-				<div class="navigation">
-					<div class="left">
-						<a href="index.html"><img class="logo" src="assets/images/bubble.svg"></a>
-					</div>
-					<div class="right">
-						<nav>
-							<ul>
-								<li>
-									<a class="link" href="index.html#about_us">About us/ team</a>
-								</li>
-								<li>
-									<a href="diensten.html">Services/ approach</a>
-								</li>
-								<li>
-									<a class="link" href="portfolio.html">Portfolio</a>
-								</li>
-								<li>
-									<a class="link" href="jobs.html">Jobs</a>
-								</li>
-								<li>
-									<a class="link" href="contact.html">Contact</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
+						<div class="navigation">
+							
+							<div class="left">
+								<a href="index.html"><img class="logo" src="assets/images/bubble.svg"></a>
+							</div>
+							
+							<div class="right">
+								<div class="open">
+									<span class="cls">
+									</span>
+									<span>
+										<nav>
+											<ul class="sub-menu">
+												<li>
+													<a class="link" href="index.html#about_us">About us/ team</a>
+												</li>
+												<li>
+													<a  href="diensten.html">Services/ approach</a>
+												</li>
+												<li>
+													<a class="link" href="portfolio.html">Portfolio</a></li>
+												<li>
+													<a class="link" href="jobs.html">Jobs</a></li>
+												<li><a class="link" href="contact.html">Contact</a></li>
+											</ul>
+										</nav>
+									</span>
+									<span class="cls"></span>
+								</div>
+							</div>
+
+						</div>
 				<div class="sf-grid__row row_1">
 					<div class="
 					sf-grid__column-xxsm-0 sf-grid__column-xsm-12 sf-grid__offset-sm-0 sf-grid__column-sm-12 sf-grid__offset-md-0 sf-grid__column-md-12
@@ -144,8 +150,9 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbexx3ppULT7a2USfkY1wvAujBrE24Aj0&callback=initMap">
     </script>
 		<script async src="js/reset-min.js"></script>
-		<script async src="js/maps-min.js"</script> 
-		<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script async src="js/maps-min.js"></script> 
+		 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src="js/hamburger-min.js"></script>
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
 	</body>
