--- a/sites/bubble/index.html
+++ b/sites/bubble/index.html
@@ -62,20 +62,30 @@
 							</div>
 							
 							<div class="right">
-								<nav>
-									<ul>
-										<li><a class="link" href="index.html#about_us">About us/ team</a></li>
-										<li>
-										<a  href="diensten.html">Services/ approach</a>
-										</li>
-										<li>
-										<a class="link" href="portfolio.html">Portfolio</a></li>
-										<li>
-										<a class="link" href="jobs.html">Jobs</a></li>
-										<li><a class="link" href="contact.html">Contact</a></li>
-									</ul>
-								</nav>
+								<div class="open">
+									<span class="cls">
+									</span>
+									<span>
+										<nav>
+											<ul class="sub-menu">
+												<li>
+													<a class="link" href="index.html#about_us">About us/ team</a>
+												</li>
+												<li>
+													<a  href="diensten.html">Services/ approach</a>
+												</li>
+												<li>
+													<a class="link" href="portfolio.html">Portfolio</a></li>
+												<li>
+													<a class="link" href="jobs.html">Jobs</a></li>
+												<li><a class="link" href="contact.html">Contact</a></li>
+											</ul>
+										</nav>
+									</span>
+									<span class="cls"></span>
+								</div>
 							</div>
+
 						</div>
 						<div class="grid_name 
 						sf-grid__offset-xxsm-4
@@ -205,8 +215,11 @@
 				</footer>
 		</div>
 	</div>
+	 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script src="js/hamburger-min.js"></script>
 	<script async src="js/resetFooter-min.js"></script>
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
 </body>
