--- a/sites/bubble/jobs.html
+++ b/sites/bubble/jobs.html
@@ -46,31 +46,37 @@
 			<div class="sf-grid__container">
 				<!--navigation without grid-->
 				<div class="navigation">
-					<div class="left">
-						<a href="index.html"><img class="logo" src="assets/images/bubble.svg"></a>
-					</div>
-					<div class="right">
-						<nav>
-							<ul>
-								<li>
-									<a class="link" href="index.html#about_us">About us/ team</a>
-								</li>
-								<li>
-									<a href="diensten.html">Services/ approach</a>
-								</li>
-								<li>
-									<a class="link" href="portfolio.html">Portfolio</a>
-								</li>
-								<li>
-									<a class="link" href="jobs.html">Jobs</a>
-								</li>
-								<li>
-									<a class="link" href="contact.html">Contact</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
+							
+							<div class="left">
+								<a href="index.html"><img class="logo" src="assets/images/bubble.svg"></a>
+							</div>
+							
+							<div class="right">
+								<div class="open">
+									<span class="cls">
+									</span>
+									<span>
+										<nav>
+											<ul class="sub-menu">
+												<li>
+													<a class="link" href="index.html#about_us">About us/ team</a>
+												</li>
+												<li>
+													<a  href="diensten.html">Services/ approach</a>
+												</li>
+												<li>
+													<a class="link" href="portfolio.html">Portfolio</a></li>
+												<li>
+													<a class="link" href="jobs.html">Jobs</a></li>
+												<li><a class="link" href="contact.html">Contact</a></li>
+											</ul>
+										</nav>
+									</span>
+									<span class="cls"></span>
+								</div>
+							</div>
+
+						</div>
 				<div class="sf-grid__row row__into">
 					<div class=" sf-grid__offset-xxsm-0 sf-grid__column-xxsm-9 sf-grid__offset-xsm-1 sf-grid__column-xsm-8 sf-grid__offset-sm-1 sf-grid__column-sm-6 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-2 sf-grid__column-lg-7">
 						<h1>
@@ -184,8 +190,11 @@
 				</footer>
 		</div>
 	</div>
+	  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script src="js/hamburger-min.js"></script>
 	<script async src="js/resetFooter-min.js"></script>
-	<script async src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
 </body>
