--- a/sites/bubble/contact.html
+++ b/sites/bubble/contact.html
@@ -151,7 +151,7 @@
     </script>
 		<script async src="js/reset-min.js"></script>
 		<script async src="js/maps-min.js"></script> 
-		 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/hamburger-min.js"></script>
 	<script async src="https://cdnjs.cloudflare.com/ajax/libs/headroom/0.9.3/headroom.min.js"></script>
 	<script async src="js/headroom-min.js"></script>
