--- a/sites/bubble/detailpage.html
+++ b/sites/bubble/detailpage.html
@@ -136,7 +136,7 @@ Deze was gevuld met tips voor zo goedkoop mogelijk en tegelijk zo fancy mogelijk
                 </footer>
         </div>
     </div>
-      <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+      <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/hamburger-min.js"></script>
     <script async src="js/resetFooter-min.js"></script>
