--- a/sites/bubble/jobs.html
+++ b/sites/bubble/jobs.html
@@ -190,7 +190,7 @@
 				</footer>
 		</div>
 	</div>
-	  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/hamburger-min.js"></script>
 	<script async src="js/resetFooter-min.js"></script>
