--- a/sites/bubble/diensten.html
+++ b/sites/bubble/diensten.html
@@ -116,7 +116,7 @@
 					sf-grid__offset-lg-0 
 					sf-grid__column-lg-3">
 						<p>
-							We love to take the design to the next level. So togheter with you we will find a design that fits to you’r wishes and is perfect for your imago
+							We love to take the design to the next level. So togheter with you we will find a design that fits to your wishes and is perfect for your imago
 						</p>
 					</div>
 				</div>
