some changes booom

--- a/styleguide.html
+++ b/styleguide.html
@@ -37,9 +37,9 @@
         <meta content="#ffffff" name="theme-color"><!-- 
 
         Stylesheets: Vendors -->
-        <link href="css/fonts.css" media="all" rel="stylesheet">
-        <link href="css/scss/layout/grid.css" media="all" rel="stylesheet">
-        <link href="css/main.css" media="all" rel="stylesheet"><!-- Modernizr: feature detection -->
+        <link href="css_styleguide/fonts.css" media="all" rel="stylesheet">
+        <link href="css_styleguide/scss/layout/grid.css" media="all" rel="stylesheet">
+        <link href="css_styleguide/main.css" media="all" rel="stylesheet"><!-- Modernizr: feature detection -->
     </head>
     <body>
     <div class="header">
