--- a/styleguide.html
+++ b/styleguide.html
@@ -97,7 +97,7 @@
             <div class=" g__offset-3 g__column-1">
                 <h2>
                     Logo
-                </h2><img alt="logo" class="pic" src="assets/images/bubble.png">
+                </h2><img alt="logo" class="pic" src="assets/images/bubble.svg">
                 <h2 id="buttons">
                     Buttons
                 </h2><button class="circle">Sent</button>
