adding portfolio content

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,7 +100,7 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic1 piclow">
-								<img alt="shimmy_head" class="pic" src="assets/images/portfolio/shimmy_head.jpg">
+								<img alt="self made background" class="pic" src="assets/images/portfolio/shimmy_head.jpg">
 							</div></a>
 						</div>
 					</div>
@@ -136,7 +136,7 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic7 piclow">
-								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/mountainpub.jpg">
+								<img alt="logo of a pub" class="pic" src="assets/images/portfolio/mountainpub.jpg">
 							</div></a>
 						</div>
 						<div class="sf-grid__row inner__row">
@@ -144,7 +144,7 @@
 								<div class="work">
 									<a href="detailpage.html">
 									<div class="pic8 piclow">
-										<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/flow.jpg">
+										<img alt="special edition flow magazine" class="pic" src="assets/images/portfolio/flow.jpg">
 									</div></a>
 								</div>
 							</div>
@@ -154,7 +154,7 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic6 pichigh">
-								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/spirit_triangle.jpg">
+								<img alt="affiche festival" class="pic" src="assets/images/portfolio/spirit_triangle.jpg">
 							</div></a>
 						</div>
 					</div>
@@ -162,7 +162,7 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic7 piclow">
-								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/cdcover.jpg">
+								<img alt="eco werkt cd cover" class="pic" src="assets/images/portfolio/cdcover.jpg">
 							</div></a>
 						</div>
 						<div class="sf-grid__row inner__row">
@@ -182,7 +182,7 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic4 pichigh">
-								<img alt="banner waelkens" class="pic" src="assets/images/portfolio/doubleex.jpg">
+								<img alt="double exposure" class="pic" src="assets/images/portfolio/doubleex.jpg">
 							</div></a>
 						</div>
 					</div>
@@ -190,7 +190,26 @@
 						<div class="work">
 							<a href="detailpage.html">
 							<div class="pic6 pichigh">
-								<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/starsky.jpg">
+								<img alt="self made background" class="pic" src="assets/images/portfolio/starsky.jpg">
+							</div></a>
+						</div>
+					</div>
+				</div><!--ennding row-->
+				<div class="sf-grid__row row__2">
+					
+					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
+						<div class="work">
+							<a href="detailpage.html">
+							<div class="pic6 pichigh">
+								<img alt="Banner juwel shop" class="pic" src="assets/images/portfolio/juwels.jpg">
+							</div></a>
+						</div>
+					</div>
+					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-4">
+						<div class="work">
+							<a href="detailpage.html">
+							<div class="pic4 pichigh">
+								<img alt="Balaton lake" class="pic" src="assets/images/portfolio/balaton_lake.jpg">
 							</div></a>
 						</div>
 					</div>
