adding detailpage for every work

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_shimy_girl.html">
 							<div class="pic1 piclow">
 								<img alt="self made background" class="pic" src="assets/images/portfolio/shimmy_head.jpg">
 							</div></a>
@@ -106,7 +106,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_feestdagen.html">
 							<div class="pic2 piclow">
 								<img alt="duurzame feestdagen" class="pic" src="assets/images/portfolio/kerst.jpg">
 							</div></a>
@@ -116,7 +116,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage_epub.html">
+							<a href="detailpages/detailpage_epub.html">
 							<div class="pic3 pichigh">
 								<img alt="ekocycle epub" class="pic" src="assets/images/portfolio/epub.jpg">
 							</div></a>
@@ -124,7 +124,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-4">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_waelkens.html">
 							<div class="pic4 pichigh">
 								<img alt="banner waelkens" class="pic" src="assets/images/portfolio/waelkens_stage.jpg">
 							</div></a>
@@ -134,7 +134,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_pub.html">
 							<div class="pic7 piclow">
 								<img alt="logo of a pub" class="pic" src="assets/images/portfolio/mountainpub.jpg">
 							</div></a>
@@ -142,7 +142,7 @@
 						<div class="sf-grid__row inner__row">
 							<div class=" sf-grid__column-xsm-12 sf-grid__column-sm-12 sf-grid__column-md-12 sf-grid__column-lg-12">
 								<div class="work">
-									<a href="detailpage.html">
+									<a href="detailpages/detailpage_flow.html">
 									<div class="pic8 piclow">
 										<img alt="special edition flow magazine" class="pic" src="assets/images/portfolio/flow.jpg">
 									</div></a>
@@ -152,7 +152,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_spirit.html">
 							<div class="pic6 pichigh">
 								<img alt="affiche festival" class="pic" src="assets/images/portfolio/spirit_triangle.jpg">
 							</div></a>
@@ -160,7 +160,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_cd.html">
 							<div class="pic7 piclow">
 								<img alt="eco werkt cd cover" class="pic" src="assets/images/portfolio/cdcover.jpg">
 							</div></a>
@@ -168,7 +168,7 @@
 						<div class="sf-grid__row inner__row">
 							<div class="sf-grid__offset-xsm-0 sf-grid__column-xsm-12 sf-grid__column-sm-12 sf-grid__column-md-12 sf-grid__column-lg-12">
 								<div class="work">
-									<a href="detailpage.html">
+									<a href="detailpages/detailpage_penguin.html">
 									<div class="pic8 piclow">
 										<img alt="penguinOnSaturn" class="pic" src="assets/images/portfolio/penguinOnSaturn.jpg">
 									</div></a>
@@ -180,7 +180,7 @@
 				<div class="sf-grid__row row__2">
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-4">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_exposure.html">
 							<div class="pic4 pichigh">
 								<img alt="double exposure" class="pic" src="assets/images/portfolio/doubleex.jpg">
 							</div></a>
@@ -188,7 +188,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_starsky.html">
 							<div class="pic6 pichigh">
 								<img alt="self made background" class="pic" src="assets/images/portfolio/starsky.jpg">
 							</div></a>
@@ -199,7 +199,7 @@
 					
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-3 sf-grid__column-lg-2">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_jewel.html">
 							<div class="pic6 pichigh">
 								<img alt="Banner juwel shop" class="pic" src="assets/images/portfolio/juwels.jpg">
 							</div></a>
@@ -207,7 +207,7 @@
 					</div>
 					<div class=" outer sf-grid__offset-xsm-1 sf-grid__column-xsm-10 sf-grid__offset-sm-1 sf-grid__column-sm-10 sf-grid__offset-md-1 sf-grid__column-md-10 sf-grid__offset-lg-0 sf-grid__column-lg-4">
 						<div class="work">
-							<a href="detailpage.html">
+							<a href="detailpages/detailpage_balaton.html">
 							<div class="pic4 pichigh">
 								<img alt="Balaton lake" class="pic" src="assets/images/portfolio/balaton_lake.jpg">
 							</div></a>
